[tool.poetry]
name = "arena-api"
version = "2.0.1"
description = ""
authors = ["Zac Pullen <zac@greenroomrobotics.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
